# specialsitsai

./: .gitignore  README.md  main.py  pyproject.toml
airflow/: manager.py
airflow/dags/: run_ssai.py
app/: main.py
app-frontend/: package-lock.json  package.json
app-frontend/src/: App.tsx
app-frontend/src/components/: FilingSummary.tsx  TickerDetail.tsx
app-frontend/src/services/: api.ts
app-frontend/src/styles/: AppStyles.ts  DetailStyles.ts  SummaryStyles.ts
app-frontend/src/types/: index.ts
app/api/: routes.py
app/api/endpoints/: oddlots.py  spinoffs.py
app/core/: config.py
app/models/: schemas.py
app/services/: oddlots.py  spinoffs.py
specialsitsai/: __init__.py  chatbot.py  db.py  oddlots.py  rag.py
substack/: author_template.html  substack_scraper.py
