[tool.poetry]
name = "specialsitsai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "specialsitsai"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
python-dotenv = "^1.0.1"
langchain = "^0.2.15"
langchain-community = "^0.2.14"
langchain-openai = "^0.1.23"
langchain-chroma = "^0.1.3"
beautifulsoup4 = "^4.12.3"
selenium = "4.16.0"
webdriver_manager = "4.0.1"
html2text = "2020.1.16"
Markdown = "3.6"
structlog = "24.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
apache-airflow = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
